# chatgpt_telegram_bot

./: .dockerignore  .gitignore  Ashi  CHANGELOG.md  Dockerfile  GPT_ashi  LICENSE  Makefile  README.md  bot.py  captain-definition  chatgpt.py  claude.md  config.env.example  config.example.yml  config.py  docker-compose-sqlite.yml  docker-compose.example.yml  docker-compose.redis.yml  docker-compose.yml  environment.yaml  good_file  heroku.yml  king  pyproject.toml  requirements.txt  run.sh  start.sh  stop.sh  test.json  todo.md  update.sh  utils.py
.do/: deploy.template.yaml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yaml  ci.yml  deploy.yml  docker-image.yml  docker-publish.yml  manual_docker_build.yml  push.yml
bot/: assistant.py  bot.py  brain.py  chatgpt.py  config.py  constants.py  cosmosdb.py  database.py  database_mongo.py  database_sqlite.py  dbTest.py  db_redis.py  mateo.py  openai_utils.py  payment.py  setting.py  tests.py  text_to_speech.py  tts_utils.py  utils_chat.py  utils_mateo.py  vision_handle.py
config/: api.example.yml  chat_mode.example.yml  chat_modes copy.yml  chat_modes.yml  config.env  config.example.env  config.example.yml  config.yml  donates.yml  leeme.md  model.example.yml  models.yml  vi config.example.yml
custom/: clickup_to_markdown.py  test_clickup.py  vault.py  vault_search.py
kompose/: README.md  chatgpt-telegram-bot-deployment.yaml  mongo-claim0-persistentvolumeclaim.yaml  mongo-deployment.yaml  mongo-express-deployment.yaml  mongo-express-service.yaml  mongo-service.yaml
static/: messages.yml
(+16 files in other folders)
